Added end-point for creating a campaign and completed more of the API response documentation
